# libarchive

./: .bzrignore  .gitignore  BootstrappingTar.wiki  BsdtarManPage  BsdtarManPage.wiki  BuildInstructions.wiki  CMakeLists.txt  COPYING  CTestConfig.cmake  Examples.wiki  FormatDetection.wiki  FormatEmpty.wiki  FormatISO9660.wiki  FormatRaw.wiki  FormatZip.wiki  GitSvn.wiki  Hardlinks.wiki  INSTALL  LibArchiveTool.wiki  Libarchive3.wiki  LibarchiveAddingReadFilter.wiki  LibarchiveAddingTest.wiki  LibarchiveFormats.wiki  LibarchiveIO.wiki  LibarchiveInternals.wiki  LibarchiveUsers.wiki  Makefile.am  ManPageArchiveEntry3.wiki  ManPageArchiveEntryLinkify3.wiki  ManPageArchiveEntryPerms3.wiki  ManPageArchiveEntryStat3.wiki  ManPageArchiveEntryTime3.wiki  ManPageArchiveRead3.wiki  ManPageArchiveReadData3.wiki  ManPageArchiveReadDisk3.wiki  ManPageArchiveReadExtract3.wiki  ManPageArchiveReadFilter3.wiki  ManPageArchiveReadFormat3.wiki  ManPageArchiveReadFree3.wiki  ManPageArchiveReadHeader3.wiki  (+49 more)
contrib/: README  libarchive.1aix53.spec  libarchive_autodetect-st_lib_archive.m4  libtransform.spec  untar.c
cpio/: CMakeLists.txt
doc/: update.sh
examples/: tarfilter.c  untar.c
libarchive/: CMakeLists.txt  archive.h  archive_entry.c  archive_entry.h  archive_entry_private.h  archive_platform.h  archive_private.h  archive_read.c  archive_read_disk_entry_from_file.c  archive_read_open_fd.c  archive_read_open_file.c  archive_read_open_filename.c  archive_read_open_memory.c  archive_read_private.h  archive_read_support_filter_none.c  archive_read_support_format_ar.c  archive_read_support_format_cpio.c  archive_read_support_format_rar.c  archive_read_support_format_zip.c  archive_read_support_transform.c  archive_util.c  archive_util_transform_shim.c  archive_write.c  archive_write_disk.c  archive_write_open_fd.c  archive_write_open_file.c  archive_write_open_filename.c  archive_write_open_memory.c  archive_write_private.h  archive_write_set_format_ustar.c  archive_write_set_format_xar.c  archive_write_set_options.c  archive_write_transform.c
libarchive_fe/: getdate.h  lafe_platform.h  options.c  options.h
libtransform/: CMakeLists.txt  archive.h  archive_platform.h  archive_private.h  archive_read_open_file.c  archive_read_open_filename.c  archive_string.h  archive_util.c  archive_virtual.c  archive_windows.c  archive_windows.h  archive_write_open_fd.c  archive_write_open_filename.c  archive_write_open_memory.c  config_freebsd.h  filter_fork.c  filter_fork_windows.c  libtransform.3  libtransform_internals.3  sources-needing-cleaning.txt  transform.h  transform_check_magic.c  transform_crc32.h  transform_endian.h  transform_hash.h  transform_platform.h  transform_private.h  transform_read.c  transform_read_open_fd.c  transform_read_open_file.c  transform_read_open_filename.c  transform_read_open_memory.c  transform_read_open_transform.c  transform_read_private.h  transform_read_support_compression_all.c  transform_read_support_compression_bzip2.c  transform_read_support_compression_compress.c  transform_read_support_compression_gzip.c  transform_read_support_compression_none.c  transform_read_support_compression_program.c  (+24 more)
libtransform/filters/: filter_fork.c  filter_fork.h  filter_fork_windows.c  transform_read_all.c  transform_read_bzip2.c  transform_read_compress.c  transform_read_gzip.c  transform_read_none.c  transform_read_program.c  transform_read_rpm.c  transform_read_uu.c  transform_read_window.c  transform_read_xz.c  transform_write_add_filter_none.c  transform_write_add_filter_program.c  transform_write_bzip2.c  transform_write_compress.c  transform_write_gzip.c  transform_write_none.c  transform_write_padding.c  transform_write_program.c  transform_write_xz.c
libtransform/test/: .cvsignore  CMakeLists.txt  README  main.c  read_open_memory.c  test.h  test_acl_basic.c  test_acl_freebsd.c  test_acl_pax.c  test_alignment.c  test_archive_api_feature.c  test_bad_fd.c  test_compat_bzip2.c  test_compat_bzip2_1.tbz.uu  test_compat_bzip2_2.tbz.uu  test_compat_cpio.c  test_compat_cpio_1.cpio.uu  test_compat_gtar.c  test_compat_gtar_1.tar.uu  test_compat_gzip.c  test_compat_gzip_1.tgz.uu  test_compat_gzip_2.tgz.uu  test_compat_lzma.c  test_compat_lzma_1.tlz.uu  test_compat_lzma_2.tlz.uu  test_compat_lzma_3.tlz.uu  test_compat_solaris_tar_acl.c  test_compat_solaris_tar_acl.tar.uu  test_compat_tar_hardlink.c  test_compat_tar_hardlink_1.tar.uu  test_compat_xz.c  test_compat_xz_1.txz.uu  test_compat_zip.c  test_compat_zip_1.zip.uu  test_empty_write.c  test_entry.c  test_entry_strmode.c  test_extattr_freebsd.c  test_filter_count.c  test_fuzz.c  (+129 more)
libtransform/test/broken/: test_compat_bzip2.c  test_compat_gzip.c  test_compat_lzma.c  test_compat_xz.c  test_entry.c  test_fuzz.c  test_open_file.c  test_read_bzip2.c  test_read_gzip.c  test_read_lzma.c  test_read_truncated.c  test_read_uu.c  test_read_xz.c  test_write_compress_bzip2.c  test_write_compress_gzip.c  test_write_compress_lzma.c  test_write_compress_program.c  test_write_compress_xz.c  test_write_disk.c  test_write_open_memory.c
pax/: CMakeLists.txt  bsdpax.1  bsdpax.c  bsdpax.h  bsdpax_platform.h  bsdpax_windows.h  cmdline.c  copy.c  read.c  subst.c  util.c  write.c
pax/test/: CMakeLists.txt  main.c  test.h  test_0.c  test_basic.c  test_help.c  test_option_D_upper.c  test_option_H_upper.c  test_option_J_upper.c  test_option_L_upper.c  test_option_T_upper.c  test_option_T_upper.pax.uu  test_option_Y_upper.c  test_option_Z_upper.c  test_option_a.c  test_option_b.c  test_option_c.c  test_option_compress.c  test_option_d.c  test_option_j.c  test_option_k.c  test_option_l.c  test_option_lzma.c  test_option_n.c  test_option_nodump.c  test_option_null.c  test_option_o.c  test_option_s.c  test_option_t.c  test_option_u.c  test_option_z.c  test_options_listopt.c  test_options_listopt.pax.Z.uu  test_print_longpath.c  test_strip_components.c  test_version.c
pyarchive/: __init__.py  errors.py
pytransform/: __init__.py  errors.py
src/: pyarchive.c  pytransform.c
tar/: CMakeLists.txt  bsdtar.c  write.c
test/: deeptest.sh
(+29 files in other folders)
